cargo-features = ["edition2021"]

[package]
name = "solana-bridge-program"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.11.10"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.9.3"
mpl-token-metadata = {version = "1.11.0", features = [ "no-entrypoint" ] }
thiserror = "1.0"
shank = { version = "~0.0.2" }
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
spl-associated-token-account = {version = "1.1.3", features = [ "no-entrypoint" ] }
bs58 = "0.4.0"

[dev-dependencies]
solana-sdk = "1.7.11"

[lib]
name = "bridge"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true