cargo-features = ["edition2021"]

[package]
name = "solana-bridge-lib"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.15.2"
borsh = "0.9.3"
num-derive = "~0.3"
thiserror = "1.0"
num-traits = "~0.2"
bs58 = "0.4.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
mpl-token-metadata = {version = "1.11.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = {version = "1.1.3", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = "1.7.11"

[lib]
name = "lib"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true